# wayland_example_cmake

./: CMakeLists.txt  main.c
